Realice la seccion de la caja de busqueda, con los iconos y estilos

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </section>
         <section class="main-input">
             <div class="main-input-container">
-                <span class="serch-icon">lupa</span>
+                <span class="serch-icon"></span>
                 <input type="text">
-                <a class="micro-icon" href="">microfono</a>
+                <a class="micro-icon" href=""></a>
             </div>
         </section>
         <section class="main-button">
