--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="main-input-container">
                 <span class="serch-icon"></span>
                 <input type="text">
-                <a class="micro-icon" href="www.google.com"></a>
+                <a class="micro-icon" href="https://www.google.com/"></a>
             </div>
         </section>
         <section class="main-button">
