--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section class="main-button">
             <div>
-                <button>Buscar con Google</button>
+                <button><a class="micro-icon" href="https://www.google.com/">Buscar con Google</a></button>
             </div>
             <div>
                 <button>Me siento con suerte</button>
